--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ ul {
 
 body {
     background-color: #121214;
-    background-image: url(/assets/background.svg);
+    background-image: url(assets/background.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
