--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ ul {
 
 body {
     background-color: #121214;
-    background-image: url(assets/background.svg);
+    background-image: url(https://github.com/4lisson0/CopaDateBR/blob/ad3ec627ff9846d5b139298559c89dda82d6d5bc/assets/background.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
