--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ ul {
 
 body {
     background-color: #121214;
-    background-image: url(assets/background.svg);
+    background-image: url(https://raw.githubusercontent.com/4lisson0/CopaDateBR/091f7cfc42f159bcd871a43a92e1a7ddb2f29ac8/assets/background.svg);
     background-repeat: no-repeat;
     background-size: cover;
 
